Added  CFrame::OnMeasureItem
Added  CFrame::AddMenuIcon
Added  CFrame::AddMenuIcons
Added  CFrame::GetMenuTheme
Added  CFrame::SetMenuTheme
Added  CMDIFrame::GetActiveMDIChildCWnd
Added  CWinApp::InitInstance
Added  CWinApp::Run
Added  CWnd::CenterWindow
Removed CDialog::Center    (use CWnd::CenterWindow instead)
Removed CMenubar::SetIcons (use CFrame::AddMenuIcons instead)
Moved   CWnd::GradientFill to GradientFill
Moved   CWnd::SolidFill    to SolidFill
Renamed ThemeMenubar       to ThemeMenu 
Renamed CMenubar::GetTheme to CMenubar::GetMenubarTheme
Renamed CMenubar::SetTheme to CMenubar::SetMenubarTheme
Renamed CRebar::GetTheme   to CRebar::GetRebarTheme
Renamed CRebar::SetTheme   to CRebar::SetRebarTheme
Renamed CToolbar::GetTheme to CToolbar::GetToolbarTheme
Renamed CToolbar::SetTheme to CToolbar::SetToolbarTheme


Version 5.5
-----------
Bugs Fixed:
* Visual Studio 6 (without a Platform SDK update) reports a 'TB_GETSTRING' 
  as an undeclared identifier.
* Dev-C++ reports a warning passing NULL used for non-pointer
* Threads sample, can generate an exception in release mode
* Performance sample, m_nTestWindows not initialised
* Corrected text layout for toolbar buttons with TBSYLE_DROPDOWN style.

New Features:
* Themes are now enabled by default. CFrame::SetTheme defines the default
  theme for the rebar, toolbar and menubar. To modify the theme, override
  SetTheme in CMainFrame. To disable themes, set m_bUseThemes to FALSE in
  CMainFrame::OnCreate.
* The default color of a splitter bar is set to the background color of 
  the rebar.  
* If a resource for disabled toolbar items isn't provided, an ImageList
   for disabled buttons is created for you. This imagelist is used for
   displaying disabled toobar buttons, and disabled menu items with an icon.
* Updated Rebar themes
  - Improved rendering of non-toolbar bands during band repositioning
  - Round borders and flat style now supported in Win95, Win98 & WinME
* Updated Toolbar themes